# SentimentR

./: API_KEY_SETUP.md  API_KEY_SUCCESS.md  Dockerfile  LICENSE  PROJECT_COMPLETION_SUMMARY.md  QUICK_START.md  README.md  demo.py  docker-compose.yml  launch_streamlit.py  pyproject.toml  requirements.txt  setup.py  setup_api_key.py  test_api_key.py  test_installation.py
enhanced_sentimentr/: __init__.py  cli.py
enhanced_sentimentr/api/: main.py
enhanced_sentimentr/core/: __init__.py  analyzer.py  aspects.py  emotions.py  gemini_client.py  models.py  rule_based.py  sentiment_wrapper.py
enhanced_sentimentr/legacy/: sentimentr.py
enhanced_sentimentr/legacy/lexica/: diminishers.txt  intensifiers.txt  neg idioms.txt  pos emojis.txt  pos emoticons.txt  pos idioms.txt  stop words.txt
enhanced_sentimentr/utils/: __init__.py  data_loader.py
enhanced_sentimentr/web/: streamlit_app.py
lexica/: neg lexicon.txt  pos lexicon.txt
sentimentr/: sentimentr.py
sentimentr/lexica/: neg emojis.txt  neg emoticons.txt  negators.txt
tests/: conftest.py  test_core.py
