[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enhanced-sentimentr"
version = "2.0.0"
description = "Enhanced context-aware sentiment analysis with Gemini integration"
authors = [
    {name = "Yuvraj Singh", email = "yuvrajsingh.tech@protonmail.com"},
    {name = "Enhanced Contributors", email = "yuvrajsingh.tech@protonmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
keywords = [
    "sentiment analysis",
    "opinion mining",
    "sentiment strength", 
    "gemini",
    "ai",
    "nlp",
    "social media",
    "emotion detection"
]

dependencies = [
    "nltk>=3.8",
    "google-generativeai>=0.3.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "plotly>=5.0.0",
    "streamlit>=1.25.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "redis>=4.5.0",
    "asyncio-throttle>=1.0.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
web = [
    "streamlit>=1.25.0",
    "gradio>=3.40.0",
]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "wordcloud>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/Yuvraj-ai"
Documentation = "tbd"
Repository = "tbd"
Issues = "tbd"

[project.scripts]
sentimentr = "enhanced_sentimentr.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["enhanced_sentimentr*"]

[tool.setuptools.package-data]
enhanced_sentimentr = ["lexica/*.txt", "models/*.json", "templates/*.html"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=enhanced_sentimentr --cov-report=html"
